# glyphoji

./: README.md  pyproject.toml
.github/workflows/: codeql.yml
glyphoji/: __init__.py  glyphoji.py  main.py
glyphoji/data/: data.json  settings.json
tests/: test_glyphoji.py
