[tool.poetry]
name = "glyphoji"
version = "0.2.6"
description = "Modern hieroglyphs in the terminal."
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://pypi.org/project/glyphoji"
repository = "https://github.com/rly0nheart/glyphoji"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Artistic Software"
]
include = [{path = "glyphoji/data/settings.json"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
